--- a/bep20-token-generator/success/index.html
+++ b/bep20-token-generator/success/index.html
@@ -48,6 +48,9 @@
     }
     else {
       console.log("development mode")
+      function gtag(event, event_name) {
+        console.log(event, event_name)
+      }
     }
   </script>
 
