--- a/bep20-token-generator/index.html
+++ b/bep20-token-generator/index.html
@@ -168,21 +168,21 @@
           <li class="nav-item " role="presentation">
             <button class="nav-link active border" id="basic-tab" data-bs-toggle="tab" data-bs-target="#basic"
               type="button" role="tab" aria-controls="basic" aria-selected="true">
-              Standard
+              Standard <span class="badge bg-primary">Free</span>
             </button>
           </li>
 
           <li class="nav-item " role="presentation">
             <button class="nav-link border" id="mintable-tab" data-bs-toggle="tab" data-bs-target="#mintable"
               type="button" role="tab" aria-controls="mintable" aria-selected="true">
-              Mintable
+              Mintable <span class="badge bg-primary">Free</span>
             </button>
           </li>
 
           <li class="nav-item " role="presentation">
             <button class="nav-link border" id="burnable-tab" data-bs-toggle="tab" data-bs-target="#burnable"
               type="button" role="tab" aria-controls="burnable" aria-selected="true">
-              Burnable
+              Burnable <span class="badge bg-primary">Free</span>
             </button>
           </li>
           <li class="nav-item " role="presentation">
