--- a/bep20-token-generator/index.html
+++ b/bep20-token-generator/index.html
@@ -191,7 +191,7 @@
               Mint and burn
             </button>
           </li>
-          <li class="nav-item " role="presentation">
+          <li class="nav-item" hidden role="presentation">
             <button class="nav-link border" id="honeypot-tab" data-bs-toggle="tab" data-bs-target="#honeypot"
               type="button" role="tab" aria-controls="honeypot" aria-selected="true">
               Honeypot 🍯
