--- a/bep20-token-generator/index.html
+++ b/bep20-token-generator/index.html
@@ -828,12 +828,12 @@
                   <div class="col-sm-9">
                     <select class="form-select reward_token" aria-label="Default select example">
                       <option value="0" selected>CAKE</option>
-                      <!-- <option value="1">ETH</option> -->
-                      <!-- <option value="2">BTC</option> -->
+                      <option value="1">ETH</option>
+                      <option value="2">BTC</option>
                       <option value="3">BNB</option>
                       <option value="4">BUSD</option>
-                      <!-- <option value="5">DOGE</option> -->
-                      <!-- <option value="6">ADA</option> -->
+                      <option value="5">DOGE</option>
+                      <option value="6">ADA</option>
                     </select>
                     <p class="hint">Select reward token to be distributed among holders.</p>
                   </div>
