--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
         <a href="https://t.me/TokenGeneratorBSC" class="me-4" target="_blank" onclick="gtag('event','telegram')">
           <i class="fab fa-telegram fa-2x"></i>
         </a>
-        <a href="https://www.youtube.com/channel/UCJr5ccy7p33qt4Yy-rLKEfg" target="_blank" style="color: red;"
+        <a href="https://www.youtube.com/channel/UCJr5ccy7p33qt4Yy-rLKEfg" target="_blank"
           onclick="gtag('event','youtube')">
           <i class="fab fa-youtube fa-2x"></i>
         </a>
