--- a/index.html
+++ b/index.html
@@ -620,7 +620,10 @@
               Tools
             </h6>
             <p>
-              <a href="/bep20-token-generator" target="_blank" class="text-reset">BEP20 token generator</a>
+              <a href="/bep20-token-generator" target="_blank" class="icon text-reset">BEP20 token generator</a>
+            </p>
+            <p>
+              <a href="/bep20-wallet-generator" target="_blank" class="icon text-reset">BEP20 wallet generator</a>
             </p>
           </div>
           <!-- Grid column -->
