--- a/index.html
+++ b/index.html
@@ -698,6 +698,10 @@
   <script src="/static/countdown.js"></script>
   <!-- <script src="/static/buyToken.js"></script> -->
   <!-- Include this in your HTML page -->
+
+  <!-- Start of HubSpot Embed Code -->
+  <script type="text/javascript" id="hs-script-loader" async defer src="//js-eu1.hs-scripts.com/25571645.js"></script>
+  <!-- End of HubSpot Embed Code -->
 </body>
 
 </html>
