--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
 
       <!-- Right -->
       <div>
-        <a href="https://t.me/TokenGeneratorBSC" class="me-4" target="_blank" onclick="gtag('event','telegram')">
+        <a href="https://t.me/TokenGeneratorBSC" class="icon me-4" target="_blank" onclick="gtag('event','telegram')">
           <i class="fab fa-telegram fa-2x"></i>
         </a>
         <a href="https://www.youtube.com/channel/UCJr5ccy7p33qt4Yy-rLKEfg" target="_blank"
@@ -620,10 +620,10 @@
               Tools
             </h6>
             <p>
-              <a href="/bep20-token-generator" target="_blank" class="icon text-reset">BEP20 token generator</a>
+              <a href="/bep20-token-generator" target="_blank" class="text-reset">BEP20 token generator</a>
             </p>
             <p>
-              <a href="/bep20-wallet-generator" target="_blank" class="icon text-reset">BEP20 wallet generator</a>
+              <a href="/bep20-wallet-generator" target="_blank" class="text-reset">BEP20 wallet generator</a>
             </p>
           </div>
           <!-- Grid column -->
