--- a/bep20-token-generator/index.html
+++ b/bep20-token-generator/index.html
@@ -969,7 +969,7 @@
                 <li class="mt-2">Tailored for your project 🥇 ✅</li>
                 <li class="mt-2">Great expertise in crypto/blockchain tech 👨‍💻 ✅</li>
                 <li class="mt-2">Quick development time 🚀 ✅</li>
-                <li class="mt-2">Afforadable 💯 ✅</li>
+                <li class="mt-2">Affordable 💯 ✅</li>
                 <li class="mt-2">Pay in crypto/paypal ☑️ ✅</li>
               </ul>
 
@@ -1259,7 +1259,7 @@
       <!-- Section: Social media -->
 
       <!-- Section: Links  -->
-      <section class="">
+      <section class="" hidden>
         <div class="container text-center text-md-start mt-5">
           <!-- Grid row -->
           <div class="row mt-3">
