--- a/bep20-token-generator/success/index.html
+++ b/bep20-token-generator/success/index.html
@@ -293,7 +293,7 @@
     <!-- Section: Social media -->
 
     <!-- Section: Links  -->
-    <section class="">
+    <section class="" hidden>
       <div class="container text-center text-md-start mt-5">
         <!-- Grid row -->
         <div class="row mt-3">
