--- a/bep20-token-generator/index.html
+++ b/bep20-token-generator/index.html
@@ -554,11 +554,6 @@
                     </p>
                   </div>
                 </div>
-                <p class="hint1">
-                  <strong>Note:</strong> If you want more functions,
-                  <a href="https://t.me/TokenGeneratorBSC">contact us.</a>
-                  👈
-                </p>
 
               </form>
             </div>
@@ -692,11 +687,7 @@
                   </div>
                 </div>
 
-                <p class="hint1">
-                  <strong>Note:</strong> If you want more functions,
-                  <a href="https://t.me/TokenGeneratorBSC">contact us.</a>
-                  👈
-                </p>
+
 
               </form>
             </div>
@@ -754,11 +745,7 @@
                   </div>
                 </div>
 
-                <p class="hint1">
-                  <strong>Note:</strong> If you want more functions,
-                  <a href="https://t.me/TokenGeneratorBSC">contact us.</a>
-                  👈
-                </p>
+
 
               </form>
             </div>
@@ -816,11 +803,6 @@
                   </div>
                 </div>
 
-                <p class="hint1">
-                  <strong>Note:</strong> If you want more functions,
-                  <a href="https://t.me/TokenGeneratorBSC">contact us.</a>
-                  👈
-                </p>
 
               </form>
             </div>
@@ -952,11 +934,6 @@
                 </div>
 
 
-                <p class="hint1">
-                  <strong>Note:</strong> If you want more functions,
-                  <a href="https://t.me/TokenGeneratorBSC">contact us.</a>
-                  👈
-                </p>
 
               </form>
             </div>
@@ -969,7 +946,7 @@
                 <li class="mt-2">Tailored for your project 🥇 ✅</li>
                 <li class="mt-2">Great expertise in crypto/blockchain tech 👨‍💻 ✅</li>
                 <li class="mt-2">Quick development time 🚀 ✅</li>
-                <li class="mt-2">Affordable 💯 ✅</li>
+                <li class="mt-2">Afforadable 💯 ✅</li>
                 <li class="mt-2">Pay in crypto/paypal ☑️ ✅</li>
               </ul>
 
@@ -986,6 +963,11 @@
         </div>
 
         <div style="display: block;" class="actionGroup">
+          <p class="hint1">
+            <strong>Note:</strong> If you want more functions,
+            <a href="https://t.me/TokenGeneratorBSC" onclick="gtag('event','contact_us_hint')">contact us.</a>
+            👈
+          </p>
           <div class="text-center">
             <p id="price" style="background-color: greenyellow">FREE</p>
             <p> GAS fee will be added to final amount</p>
@@ -1238,20 +1220,18 @@
         <!-- Left -->
         <div class="me-5 d-none d-lg-block">
           <span>Get connected with us:</span>
-
         </div>
-
         <!-- Left -->
 
         <!-- Right -->
         <div>
-          <a href="https://t.me/TokenGeneratorBSC" class="icon me-4" target="_blank" onclick="gtag('event','telegram')">
+          <a href="https://t.me/TokenGeneratorBSC" class="icon" target="_blank" onclick="gtag('event','telegram')">
             <i class="fab fa-telegram fa-2x red"></i>
           </a>
-          <a href="https://www.youtube.com/channel/UCJr5ccy7p33qt4Yy-rLKEfg" class="icon" target="_blank"
+          <!-- <a href="https://www.youtube.com/channel/UCJr5ccy7p33qt4Yy-rLKEfg" class="icon" target="_blank"
             onclick="gtag('event','youtube')">
             <i class="fab fa-youtube fa-2x"></i>
-          </a>
+          </a> -->
 
         </div>
         <!-- Right -->
