--- a/index.html
+++ b/index.html
@@ -81,11 +81,13 @@
 
           <button type="button" onclick="gtag('event','open_builder');location.href='/bep20-token-generator';"
             class="btn btn-primary btn-lg px-4 me-md-2">Create Token</button>
-
+          <!-- 
           <button type="button" onclick="gtag('event','learn_more');location.href='#features'"
             class="btn btn-outline-secondary btn-lg px-4">Learn
-            More</button>
+            More</button> -->
 
+          <button type="button" onclick="gtag('event','join_telegram');location.href='https://t.me/TokenGeneratorBSC'"
+            class="btn btn-outline-secondary btn-lg px-4">Join Telegram</button>
         </div>
       </div>
     </div>
@@ -331,8 +333,8 @@
 
       <div class="row">
         <div class="col-md-6 col-lg-4 mb-4">
-          <h6 class="mb-3 "><i class="fas fa-ribbon text-primary pe-2"></i>How do I generate BEP20 token for free?
-          </h6>
+          <h4 class="mb-3 "><i class="fas fa-ribbon text-primary pe-2"></i>How do I generate BEP20 token for free?
+          </h4>
           <p>
             In order to create BEP20 token for free, open our <a href="/bep20-token-generator">BEP20 token
               generator</a> and
@@ -341,33 +343,33 @@
         </div>
 
         <div class="col-md-6 col-lg-4 mb-4">
-          <h6 class="mb-3 "><i class="fas fa-puzzle-piece text-primary pe-2"></i>Can I add more functions to smart
-            contract?</h6>
+          <h4 class="mb-3 "><i class="fas fa-puzzle-piece text-primary pe-2"></i>Can I add more functions to smart
+            contract?</h4>
           <p>
             Of course! Contact us to discuss your project.
           </p>
         </div>
 
         <div class="col-md-6 col-lg-4 mb-4">
-          <h6 class="mb-3 "><i class="fas fa-laptop-code text-primary pe-2"></i> Can you make other tokens or develop
+          <h4 class="mb-3 "><i class="fas fa-laptop-code text-primary pe-2"></i> Can you make other tokens or develop
             smart contracts ?
-          </h6>
+          </h4>
           <p>
             Sure, we can make different types of tokens and develop smart contracts to suit your needs.
           </p>
         </div>
 
         <div class="col-md-6 col-lg-4 mb-4">
-          <h6 class="mb-3 "><i class="fas fa-code text-primary pe-2"></i> Can I have source code of contract ?
-          </h6>
+          <h4 class="mb-3 "><i class="fas fa-code text-primary pe-2"></i> Can I have source code of contract ?
+          </h4>
           <p>
             Yes, it will be available on BscScan after deployment.
           </p>
         </div>
 
         <div class="col-md-6 col-lg-4 mb-4">
-          <h6 class="mb-3"><i class="fas fa-user-plus text-primary pe-2"></i> Can I add more wallets ?
-          </h6>
+          <h4 class="mb-3"><i class="fas fa-user-plus text-primary pe-2"></i> Can I add more wallets ?
+          </h4>
           <p>
             Absolutely. For this you need to contact us.
           </p>
@@ -583,13 +585,13 @@
 
       <!-- Right -->
       <div>
-        <a href="https://t.me/TokenGeneratorBSC" class="icon me-4" target="_blank" onclick="gtag('event','telegram')">
+        <a href="https://t.me/TokenGeneratorBSC" class="icon" target="_blank" onclick="gtag('event','telegram')">
           <i class="fab fa-telegram fa-2x"></i>
         </a>
-        <a href="https://www.youtube.com/channel/UCJr5ccy7p33qt4Yy-rLKEfg" target="_blank"
+        <!-- <a href="https://www.youtube.com/channel/UCJr5ccy7p33qt4Yy-rLKEfg" class="icon" target="_blank"
           onclick="gtag('event','youtube')">
           <i class="fab fa-youtube fa-2x"></i>
-        </a>
+        </a> -->
 
       </div>
       <!-- Right -->
@@ -664,6 +666,9 @@
             <p>
               <a href="https://t.me/TokenGeneratorBSC" class="text-reset" target="_blank">Smart contract development</a>
             </p>
+            <p>
+              <a href="https://t.me/TokenGeneratorBSC" class="text-reset" target="_blank">Presale website</a>
+            </p>
             <!-- <p><i class="fas fa-home me-3"></i> Safemoon Maker</p> -->
             <!-- <p>
               <i class="fas fa-envelope me-3"></i>
@@ -698,7 +703,6 @@
   <script src="/static/countdown.js"></script>
   <!-- <script src="/static/buyToken.js"></script> -->
   <!-- Include this in your HTML page -->
-
   <!-- Start of HubSpot Embed Code -->
   <script type="text/javascript" id="hs-script-loader" async defer src="//js-eu1.hs-scripts.com/25571645.js"></script>
   <!-- End of HubSpot Embed Code -->
