--- a/bep20-token-generator/index.html
+++ b/bep20-token-generator/index.html
@@ -162,7 +162,7 @@
         <h1 class="display-5 fw-bold lh-1 mb-3 mt-2">
           Create your BEP20 token
         </h1>
-        <p class="lead">Free. Simple. No coding required.</p>
+        <p class="lead">Simple. No coding required.</p>
 
         <ul class="nav nav-pills justify-content-start" id="myTab" role="tablist">
           <li class="nav-item " role="presentation">
