--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@
         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
 
           <button type="button" onclick="gtag('event','join_telegram');location.href='https://t.me/TokenGeneratorBSC';"
-            class="btn btn-primary btn-lg px-4 me-md-2">Get free consultant</button>
+            class="btn btn-primary btn-lg px-4 me-md-2">Chat with dev</button>
           <!-- 
           <button type="button" onclick="gtag('event','learn_more');location.href='#features'"
             class="btn btn-outline-secondary btn-lg px-4">Learn
             More</button> -->
 
           <button type="button" onclick="gtag('event','open_builder');location.href='/bep20-token-generator'"
-            class="btn btn-outline-secondary btn-lg px-4">Try BEP20 generator</button>
+            class="btn btn-outline-secondary btn-lg px-4">Try BEP20 token generator</button>
         </div>
       </div>
     </div>
