--- a/bep20-token-generator/index.html
+++ b/bep20-token-generator/index.html
@@ -168,21 +168,22 @@
           <li class="nav-item " role="presentation">
             <button class="nav-link active border" id="basic-tab" data-bs-toggle="tab" data-bs-target="#basic"
               type="button" role="tab" aria-controls="basic" aria-selected="true">
-              Standard <span class="badge bg-primary">Free</span>
+              Standard
             </button>
           </li>
 
           <li class="nav-item " role="presentation">
             <button class="nav-link border" id="mintable-tab" data-bs-toggle="tab" data-bs-target="#mintable"
               type="button" role="tab" aria-controls="mintable" aria-selected="true">
-              Mintable <span class="badge bg-primary">Free</span>
+              Mintable
             </button>
           </li>
 
           <li class="nav-item " role="presentation">
             <button class="nav-link border" id="burnable-tab" data-bs-toggle="tab" data-bs-target="#burnable"
               type="button" role="tab" aria-controls="burnable" aria-selected="true">
-              Burnable <span class="badge bg-primary">Free</span>
+              Burnable
+              <!-- <span class="badge bg-primary">Free</span> -->
             </button>
           </li>
           <li class="nav-item " role="presentation">
@@ -969,7 +970,7 @@
             👈
           </p>
           <div class="text-center">
-            <p id="price" style="background-color: greenyellow">FREE</p>
+            <p id="price" style="background-color: greenyellow">0.1 BNB</p>
             <p> GAS fee will be added to final amount</p>
             <p id="tx_fee" hidden> 3% transaction fees when sell</p>
           </div>
