--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
   <link rel="icon" href="/static/media/icon.png" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" />
 
-  <script src="./lib/browser-solc.js" type="text/javascript"></script>
 
   <!-- This is our example code -->
   <!-- <script type="text/javascript" src="./walletConnectExample.js"></script> -->
-  <script type="module" src="/static/misc.js"></script>
+
   <!-- <script type="module" src="/static/test-module.js"></script> -->
 
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
@@ -25,8 +24,6 @@
   <script src="https://cdn.jsdelivr.net/npm/web3js-cdn@1.3.0/web3.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 
-
-  <script src="/lib/bignumber.js"></script>
   <link rel="stylesheet" href="/static/styles.css" />
   <meta name="description"
     content="Create a BEP20 Token in less than a minute with BEP20 token generator for FREE on Binance Smart Chain. No login. No setup. No coding required." />
@@ -698,9 +695,14 @@
     }
   </script>
 
-  <script type="module" src="/static/parameters.js"></script>
-  <script src="/static/referral.js"></script>
-  <script src="/static/countdown.js"></script>
+  <script type="text/javascript" src="https://unpkg.com/web3@1.7.0/dist/web3.min.js"></script>
+  <script type="text/javascript" src="https://unpkg.com/web3modal@1.9.5/dist/index.js"></script>
+  <script type="text/javascript"
+    src="https://unpkg.com/@walletconnect/web3-provider@1.7.1/dist/umd/index.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/aes.js"></script>
+
+  <script src="/bep20-token-generator/static/new_wallet.js"></script>
+
   <!-- <script src="/static/buyToken.js"></script> -->
   <!-- Include this in your HTML page -->
   <!-- Start of HubSpot Embed Code -->
